# ytchatserver

./: Dockerfile_test_ytchat_u20.04  README.md  docker-compose-ytchat.yml
cppserver/: CMakeLists.txt  chatroom.cpp  chatroom.h  client_copy.cpp  cppserver.cpp  cppserver.h  cppserver_copy.cpp  main.cpp  ytcmake.sh
csclient/: csclient.sln  csrelrease.sh
csclient/csclient/: ClientManager.cs  Clients.cs  Createroom.Designer.cs  Createroom.cs  Form1.Designer.cs  Form1.cs  Mainroom.Designer.cs  Mainroom.cs  Modalform.cs  Program.cs  csclient.csproj  modalform.Designer.cs
csclient/csclient/Properties/: Resources.Designer.cs  Resources.resx
csclient/output/: csclient.deps.json
save/: build_test_yt_chat.sh  run_patch_ytchat.sh  run_start_ytchat.sh  run_stop_ytchat.sh
